Add parallel call activities support